notebooks_api/spawner/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-endpoints-{template_id}
  namespace:  {namespace}
spec:
  selector:
    app: {container_name}
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
