notebooks_api/spawner/manifests/spark_distributed_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-endpoints-{template_id}
  namespace:  {namespace}
spec:
  selector:
    app: {container_name}
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
    - name: blockmanager
      port: 7777
      protocol: TCP
    - name: driver
      port: 2222
      protocol: TCP
