notebooks_api/spawner/manifests/ingress_alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-endpoints-{template_id}
  namespace: {namespace}
  annotations:
    'kubernetes.io/ingress.class': {ingress_class}
    'alb.ingress.kubernetes.io/group.name': {alb_group_name}
    'alb.ingress.kubernetes.io/group.order': "{group_order}"
    'alb.ingress.kubernetes.io/inbound-cidrs': {alb_inbound_cidrs}
    'alb.ingress.kubernetes.io/listen-ports': '[{listen_ports}]'
    'alb.ingress.kubernetes.io/scheme': {alb_scheme}
    'alb.ingress.kubernetes.io/target-type': {alb_target_type}
  labels:
    'ingress_group': 'template'
spec:
 rules:
 - http:
     paths:
     - path: /sidecar/api/v1/{pod_name}/*
       backend:
         service:
           name: jupyter-endpoints-{template_id}
           port:
             number: 80
